# lineal

./: .clang-tidy  Makefile  ReadMe.md  meson.build  meson_options.txt  subprojects.txt
include/lineal/: base.hpp  component-wise.hpp  discretization.hpp  environment.hpp  io.hpp  lineal.hpp  linear-solver.hpp  math.hpp  parallel.hpp  tensor.hpp  vectorization.hpp
include/lineal/base/: compat.hpp  concept.hpp  enum.hpp  tag.hpp  type-safe.hpp  type-trait.hpp
include/lineal/base/compat/: operation.hpp
include/lineal/base/concept/: environment.hpp  grex.hpp  range.hpp  scalar.hpp  solver.hpp  transport-info.hpp  valuator.hpp  (+1 more)
include/lineal/component-wise/: consumer.hpp  exec-constraint.hpp  facade.hpp  matrix-vector-product.hpp  sink.hpp  vector-expression.hpp
include/lineal/discretization/: box-equidistant.hpp
include/lineal/environment/: environment.hpp  logger.hpp
include/lineal/io/: aggregate-map.hpp  fixed.hpp  graph.hpp  grex.hpp  index.hpp  matrix.hpp  synchronized.hpp  tensor.hpp  vector.hpp
include/lineal/linear-solver/: bicgstab.hpp  cholesky.hpp  conjugate-gradients.hpp  direct.hpp  iterative-stationary.hpp  multigrid.hpp  runner.hpp
include/lineal/math/: harmonic-mean.hpp
include/lineal/parallel/: def.hpp  distributed-info.hpp  execution-policy.hpp  index.hpp
include/lineal/tensor/: dynamic.hpp  fixed.hpp
include/lineal/vectorization/: grex.hpp  multibyte.hpp
subprojects/: .gitignore
test/: meson.build  shared-blocked.cpp  shared-csr.cpp  shared-fixed.cpp  shared-stencil-csr-compressed.cpp  shared-stencil-csr-full.cpp  shared-stencil-lookup.cpp  shared-stencil-value.cpp  shared-stencil.hpp  shared-vector.cpp  tensor-io.cpp
test/aux/: default.hpp  iterative.hpp  materials.hpp  msg.hpp  test.hpp
test/data/: UFZ_CT_02_LHS.smf  UFZ_CT_02_RHS.dvf
test/python-reference/: analyze.py  cholesky.py  sor.py
test/python-reference/defs/: __init__.py  defs.py  diffusion_matrix.py  materials.py  parse_print.py  print.py  solvers.py
test/tools/: arch.py
(+100 files in other folders)
